<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">法艺花园</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="rtbn_law_data_text">法律数据</string>
    <string name="rbtn_law_news_text">法律新闻</string>
    <string name="rbtn_my_favorite_text">我的收藏</string>
    <string name="rbtn_personal_center_text">个人中心</string>
    <string name="edit_input_user_name_hint_text">用户名</string>
    <string name="edit_input_password_hint_text">请输入密码</string>
    <string name="btn_login_text">登 录</string>
    <string name="chk_remember_password_text">记住密码</string>
    <string name="txt_find_password_text"> 找回密码？</string>
    <string name="txt_full_text">全文</string>
    <string name="edit_search_key_word_hint_text">请输入查询关键字</string>
    <string name="search_type_full_txt">全文</string>
    <string name="txt_pro_text">专题</string>
    <string name="txt_title_text">标题</string>
    <string name="txt_article_text">法条</string>
    <string name="txt_fav_article_text">法规</string>
    <string name="txt_user_name_format_text">用户名    :%s</string>
    <string name="txt_service_type_format_text">服务类型：%s</string>
    <string name="txt_purchase_date_format_text">购买时间：%s</string>
    <string name="txt_overdue_date_format_text">过期时间：%s</string>
    <string name="txt_about_us_text">关于我们</string>
    <string name="action_bar_search">搜索</string>
    <string name="action_bar_edit">编辑</string>
    <string name="action_bar_save">保存</string>
    <string name="btn_register_text">注 册</string>
    <string name="edit_phone_hint_text">手机号</string>
    <string name="edit_password_text">密码</string>
    <string name="edit_password_confirm_text">确认密码</string>
    <string name="text_register_text">注册 | </string>
    <string name="txt_person_center">个人中心</string>
    <string name="btn_cancel_text">取消</string>
    <string name="txt_about_us">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;法艺花园，集法律数据与法律新闻于一体，电脑、平板、手机跨平台通用的法律查询系统。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;法艺花园，独创“法条重构”模式——拆解法规、专题重构，致力于提供法律人用得上、当事人看得懂的法律数据。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;法艺花园，由法艺科技联合多个律所进行数据维护，全力把中国庞大的成文法森林装点成一座法律花园。\n\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;更多请登录法艺花园官方网站: www.lawyer1981.com \n\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;官网：http://www.llgarden.com\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;微博：http://weibo.com/llgarden\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;微信：请搜索公众账号-“法艺花园”\n
</string>

</resources>