<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/rgrp_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            style="@style/RadioButtonCategory"
            android:text="@string/txt_pro_text"
            android:visibility="gone" />

        <RadioButton
            style="@style/RadioButtonCategory"
            android:text="@string/txt_article_text"
            android:visibility="gone" />

        <RadioButton
            style="@style/RadioButtonCategory"
            android:text="@string/txt_title_text"
            android:visibility="gone" />

        <RadioButton
            style="@style/RadioButtonCategory"
            android:text="@string/txt_full_text"
            android:visibility="gone" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linear_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:src="@drawable/esc" />

        <TextView
            android:id="@+id/txt_subject_title"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/img_subject_favorite"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:src="@drawable/list_start" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_law"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/list_articles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>