<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip"
        android:src="@drawable/top_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit_search"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_weight="1"
            android:background="@drawable/top_search"
            android:drawableLeft="@drawable/top_icon_search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:paddingLeft="10dip" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dip"
            android:background="@drawable/search_none_btn"
            android:paddingBottom="3dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:paddingTop="3dip"
            android:text="@string/btn_cancel_text"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgrp_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbtn_subject"
            style="@style/RadioButtonCategory"
            android:drawablePadding="5dip"
            android:text="@string/txt_pro_text" />

        <RadioButton
            android:id="@+id/rbtn_title_text"
            style="@style/RadioButtonCategory"
            android:drawableLeft="@drawable/tab_l_03"
            android:text="@string/txt_title_text" />

        <RadioButton
            android:id="@+id/rbtn_article"
            style="@style/RadioButtonCategory"
            android:drawableLeft="@drawable/tab_l_03"
            android:text="@string/txt_full_text" />
    </RadioGroup>

    <ListView
        android:id="@+id/list_law"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F9F9F9"
        android:cacheColorHint="#00000000"
        android:divider="#dedede"
        android:dividerHeight="1dip"
        android:listSelector="@drawable/item_selector" />

    <ListView
        android:id="@+id/list_articles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="#00000000"
        android:divider="#dedede"
        android:dividerHeight="1dip"
        android:listSelector="@drawable/item_selector"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txt_no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="没有数据"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txt_subject_title_text_size"
        android:visibility="gone" />

</LinearLayout>